# RaylibPlayground

./: .gitignore  CMakeLists.txt  README.md
HelloWorld/: CMakeLists.txt
HelloWorld/src/: main.cpp
Loop/: CMakeLists.txt
Loop/assets/dev/: tile1.afdesign  tile1_outline.afdesign  tile2a.afdesign  tile2a_outline.afdesign  tile2b.afdesign  tile2b_outline.afdesign  tile3.afdesign  tile3_outline.afdesign  tile4.afdesign  tile4_outline.afdesign
Loop/assets/shaders/: coloring.frag  radial_fade.frag  write.frag
Loop/assets/tiles/: tiledef
Loop/src/: App.cpp  App.h  ColorPalette.cpp  ColorPalette.h  ColoringShader.cpp  ColoringShader.h  DrawItem.h  DrawUtils.cpp  DrawUtils.h  FadeAnimation.cpp  FadeAnimation.h  Mosaic.cpp  Mosaic.h  Port.cpp  Port.h  RadialFadeShader.cpp  RadialFadeShader.h  Sprite.cpp  Sprite.h  SpriteLoader.cpp  SpriteLoader.h  Tile.cpp  Tile.h  TileDefinition.cpp  TileDefinition.h  TileDefinitionLoader.cpp  TileDefinitionLoader.h  TileFactory.cpp  TileFactory.h  main.cpp
